--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
@@ -4,147 +4,42 @@
 
 ## Lesson Objective
 
-In this lesson you will learn how to solve various visual and thinking question with logical analysis and thinking
+We have already covered 3 different types of puzzles in the previous lesson of thinking with visuals. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture.
 
   
 
-**Why is solving visual and thinking questions important?**
+## Takeaways from the previous lesson
+
+The most important takeaways from the previous lesson were:
+
+-   Look for some pattern to solve the puzzles
+    
+-   Get clarity on the problem before looking for solution
+    
+-   Involve Problem solving steps like understanding the context, identify the possible solution and check the best-fit.
+    
 
   
 
-The way you will use to solve such questions, will enhance your thinking and will also increase your level of commitment to approach any problem fearlessly.
+**So what are you waiting for?**
 
   
 
-## About the lesson
+![](https://i.giphy.com/media/xUNd9TU7F3LxarJ9kY/200.webp)
 
   
 
-Here, basically we will be dealing with various types of visual, logical and reasoning problems, which will ask you to think deeper and you will also find this lesson very interesting. In the previous part we learnt about various visual resonings, now it’s time to go deeper in them. Happy learning!!
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-## 1. Missing Terms
+Source: [Giphy](https://giphy.com/gifs/heyarnold-hey-arnold-nicksplat-xUNd9TU7F3LxarJ9kY?utm_source=media-link&utm_medium=landing&utm_campaign=Media%20Links&utm_term=https://giphy.com/)
 
   
 
-**What are they?**
-
-These are the questions in which you will be given some images and a missing area, and you have to predict what can be placed in place of the blank area that fits best among all options and follow the trend others are following.
+## About the lesson:
 
   
 
-**Way of thinking and dealing with such questions?**
-
->As you can see, it's looking more like a hight level thinking and visualisation type of question. So, the only way to solve such problems is to see what the given part of the image is doing and just do the same in order to achieve the missing part.
+In this lesson we will be dealing with various types of visual, logical and reasoning problems. You will be made to think deeper and we hope you find this lesson very interesting. In the previous lessons we learnt about various visual resonings, now it’s time to go deeper in them. Happy learning!!
 
   
-
-**Example 1:**
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image1.png)
-  
-
-**How to approach**
-
-Yes, you are thinking right. Just follow the steps followed in given part of the image blindly and you will get the correct answer. Let's discuss example 1, here you can see that we have 3 rows and 3 columns and the right-bottom most cell is missing from it and we have to predict that. So, try to see in the first 2 rows, what are they doing. What they are doing is, if they have something in common, they are removing that and if they have something different they are adding that in the final output. Or another way to visualise this is just remove the overlapping part from both of the figures and you will get the correct final output.
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image2.png)
-  
-
->(This problem will help you ace problems related to pattern matching and trend analysis in competitive programming)
-
-  
-  
-
-**Follow on:**
-
->Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
-
-  
-**Follow on questions:**
-
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image3.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image4.png)
-  
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image5.png)
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-**Solution to follow on questions:**
-
-  
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image6.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image7.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image8.png)
-  
-
-## 2. Colouring Patterns
-
-**What are they?**
-
-These are the equations consisting of various images and having either white,grey or green colour in the circles and you have to predict the colour of circles in the figures given in the last row, below black line.
-
-  
-
-**Way of thinking and dealing with such questions?**
-
-As you can see, it's looking more like a conditional based question asking you to check various conditions before coming to a conclusion. So, try to identify what speciality a figure is having under the same colour and just take note of that and while answering the query images below and you will get the correct answer.
-
-  
-
-**Example 1:**
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image9.png)
-  
-
-**How to approach**
-
->Yes, you are thinking right. Just note down various conditions the image has for similar colours. Lets dry run this idea, for the first example. Just, visualise the content of the boxes having green colour. You will get to know all those boxes which have numerical values in range 5 to 9 are coloured as green, while those boxes which have numerical values in range 0 to 4 have colour as grey. Now we just noted the conditions on a paper. Now, let's use them to answer queries. 1st box have all numbers in range 5 to 9 so it will be green, 2nd and 3rd box have all numerical values in range 0 to 4 so colour will be grey and in 4th box, numerical values lie in range 5 to 9, so it will be assigned with green colour, and kudos you got the correct answer.
-
-  
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image10.png)
-  
-
-(This question will let you think deeper and will ask you to check various cases possible and will increase your logic building quotient).
-
-  
-
-**Follow on:**
-
->Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
   
@@ -160,64 +55,298 @@ As you can see, it's looking more like a conditional based question asking you t
   
   
 
-**Follow on questions and solution:**
-
-  
-  
-  
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image11.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image12.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image13.png)
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-## 3. Logic First, Code next
+### 1. Missing Terms:
 
   
 
 **What are they?**
 
-In this session we will try to analyse the question and will try to build a logic so that we can get the right output.
+These are the kind of problems in which you will be given some images and a missing area, and you will be asked to predict what can be filled in place of the blank area that fits best from all the options provided. It should follow the trend others are following or display.
+
+  
+
+**How do we think and approach such questions?**
+
+At the first glance it seems to be a question that involves height level thinking and visualisation. Analyse and observe the pattern followed in the consequent images and apply the same to get the rest of the pattern.
+
+  
+
+**Example 1:** Find the missing part
+
+![](https://lh6.googleusercontent.com/AwqigjyGVOVpZ5A1VN07wEfT9yu-MZjGiNeB3ldpMUWP3qJzMFsprzg6x_ehEo5IebpVnH-XHfEUyZta-msyflqnbkkp4kwLbRYsA79IS3-0D2w1xt_ZLFzMA3yMakxIs1NArYKAOnX-gQTIm-0jzZI)
+  
+
+**How to approach**
+
+Let us discuss example 1. Here you can see that we have 3 rows and 3 columns and the right-bottom most cell is missing from it. Our task is to select one of the figures from the options that fits in the pattern, replacing the question mark. Observe the patterns in the first two rows. If you observe carefully, the method of obtaining the third figure in each row is the removal of common elements between the first two figures and then adding the rest of the elements to achieve the final output. Another way to visualise this is to remove the overlapping part from both of the figures and you will get the correct final output.
+
+  
+
+![](https://lh5.googleusercontent.com/j0utY5MwVi2Y9me9N0PYYusfIWp-5Y4zAJiOR7Um4QvDjP7qkYmnfKNk1PhvEt-bkelEtnYPmS0oJtDMLhVs1Hzf5OSLTOt9epy_Wj_uuoRNTkRtI3eot4fYeuS6y-0Ko7A_Y70wVcf2l7yy5Gq7Cw)
+
+**Solution:** The answer is option E.
+
+  
+
+This problem will help you ace other problems related to pattern matching and trend analysis in competitive programming.
+
+  
+  
+
+**Follow up**
+
+Now try to solve the remaining examples on your own. We hope you understand the concept involved in solving such problems. It is an essential skill in solving a coding problem.
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+**Follow up questions**
+
+  
+
+**Question 1:**
+
+  
+![](https://lh4.googleusercontent.com/edFps3UN1A_fcFp79esglBs37WE4nxI50EMmc745XdTdGRq2D42L6U3N5bEupo1n6e_9Q116VvwMHKl-J1s8ZCWNQrpLgFBVWUpYuFXu1BRTdE17meeAUTs6ccRlot2GGtFaMloiumbW1uVBOwwyKGQ)
+
+
+
+
+<details>
+  <summary>Check the Solution!</summary>  
+
+The answer is option 3.
+
+For every edge shared by two triangles, the arrows from both
+
+of its sides mirror one another.
+  
+</details>  
+  
+
+**Question 2:**
+
+  
+![](https://lh4.googleusercontent.com/FlaJzZBkVzGbx0vlPfx1ivELNJntcEFad3vlUoxbvnuktbwD3k4KJhTFOislzir5_xgBSQNpPSAGrnMYS8uZEOlpBnrghga-SHQQsVBCDgzRDL65OES1LYGZ_HcMYWxJ640O78VJZ0e84nneCajdZ0A)
+  
+  
+
+
+<details>
+  <summary>Check the Solution!</summary>  
+
+ The answer is option E.
+
+In each row, the figures are rotated by 90 degrees in
+
+clockwise direction.
+  
+</details>  
+
+  
+  
+  
+  
+  
+
+**Question 3:**
+
+**Find the missing part**
+
+![](https://lh6.googleusercontent.com/b6FXz69oV55OQRCyCE8kOva4-YRzIoIHzjXoJk3tMbY-bFt7qiSEB5EY-GTlp0kt01rQutaIyOuDxcp8uDanHgyWrUvJxR6XQxAOxr3PE26d1u0-IoC1rqw3ZAD22b8aV7kARAt7eg1HWS75QjY)
+  
+
+ 
+<details>
+  <summary>Check the Solution!</summary>  
+
+
+From the figures in row 1 to row 2 the shaded row/column of the figure is shifted by one position. Hence the answer is option f.
+
+  
+</details>  
+ 
+
+
+  
+  
+  
+  
+  
+
+### 2. Colouring Patterns:
+
+**What are they?**
+
+These are equations consisting of various images having either white, grey or green colour in the circles and you have to predict the colour of circles in the figures given in the last row, below the black line.
+
+  
+
+**How do we think and approach such questions?**
+
+When you first scan the question it appears to be conditional based which requires you to check various conditions before coming to a conclusion. Try to identify what is unique in a figure with the same colour and take note of that while answering the query images below and you will get the correct answer.
+
+  
+
+**Example 1:**
+
+![](https://lh4.googleusercontent.com/96EysvUbWNyGjJRkqM1HrFsjsljv0WA1iZ5-aBqOeAwEbXZJy0_L8SLtrSVgeGcukpMhqQk4TX0yUX6fqTpaDfnMqatG5eCESlD_Q2An3xu3LOcqI4U9kChd42Yxu0jS7G2XJSl_SN50xIDP7jV2nA)
+
+  
+  
+
+**How to approach**
+
+Step one in reaching the desired conclusion is to note down various conditions the image has for similar colours. Let’s dry run this idea, for the first example. Visualise the content of the boxes having green coloured bubbles. You may notice that all the boxes which have numerical values within range of 5 to 9 are marked with green colored bubbles, while those which have numerical values in the range of 0 to 4 have their bubbles colored in grey. Make a note of this and keep a track of each step followed in the entire thought process. Now, let's use these conclusions to answer queries. The 1st box has all numbers in the range of 5 to 9 so it will be green Similarly, the 2nd and 3rd boxes have all numerical values in the range of 0 to 4 so they will be coloured grey. And the 4th box’s numerical values lie in the range of 5 to 9, so it will be assigned the colour green.Kudos you have arrived at the right solution!
+
+  
+  
+
+**Solution:**
+
+![](https://lh6.googleusercontent.com/YRp3vWL-v6lKFyD-dDkFaAbyuBrU20uhNuoIIHG4SKLS9ZTHmJVTMUOW4CQyo7dC9tXTl4T6BxDAA07Py4WwDI4_8VxQsq3tikX_109OOs9EiMBIdLklD9dIyMENjYAaW6ET8WZufhccMvSflB0)
+
+Pattern: Green → Number range is 5 to 9
+
+Grey → Number range is 0 to 4
+
+  
+
+>This question will enable you to think deeper, ask you to check various possible cases and therefore increase your logic building quotient.
+
+  
+
+**Follow up**
+
+Try to solve the remaining examples on your own and explore more such problems available on the internet. Developing this thinking and analysis pattern is crucial for solving future coding related problems.
+
+  
+
+**Follow up questions**
+
+  
+
+**Question 1**
+
+![](https://lh5.googleusercontent.com/IB8WOQcmICSDmrKOUYLplgBJuOUcR4MXv5-5QkoN0-4gnFxUcKhzvIvRRRYLEzIKmWBYL3wXFWNNl3fzXQPLcowU1VaCCsUtF424BkTVoGCq21EdeL1m_mtegyXUci0ClaI6HFHFb-WpQSg_iI4yZq8)
+
+  
+
+
+<details>
+  <summary>Check the Solution!</summary>  
+
+Grey Green Grey Green
+
+The pattern followed here is as follows:
+
+Green → A specific letter ( H/N/D) repeats 5 times in the grid.
+
+If no repetition is observed then the bubble will grey .
+
+ 
+  
+</details>  
+ 
+
+**Question 2:**
+
+![](https://lh3.googleusercontent.com/2rURBzPhbaE3dTkpagnRhFZ9EhLZDIWfV1v1BNOruZGaEpnerXK4ci6YncqdaR6u71FWbU1O5kYa0ppWUmMTn4qMnmnJiKTLjZ0Pd0zKxVQqPQZu2QBAxDrBSZgQt9SyZ1CNxIxZnGNRAFO_OYDJxcI)
+  
+<details>
+  <summary>Check the Solution!</summary>  
+
+Grey Grey Green Green
+
+The pattern followed is as follows:
+
+Green → All the elements at the corners are the same.
+
+If the elements at all four corners are not the same then the bubble is grey .
+
+
+  
+</details>  
+ 
+
+**Question 3:**
+
+![](https://lh5.googleusercontent.com/O_lCp4KIBoJKzjQvh0E-9_ajOGmFcCTWpGwJwCwbipb6UfzTJiT8XipekkKP6MP9eqmsGYCGjahb2OMwmF2whTmShIiDFF9iD5_Jb2TLqOBlx4iTd8wrOOxU0ayej-8TXbaCY1NmH7q2yxZySs1r0PE)
+
+  
+<details>
+  <summary>Check the Solution!</summary>  
+
+
+The pattern followed is as follows:
+
+Grey 🡪 All elements of vertical diagonal are same.
+
+  
+  
+</details>  
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+### 3. Logic First, Code next:
+
+  
+
+**What are they?**
+
+In this session we will try to analyse the question and attempt to build a sound logic to achieve the desired output.
 
   
   
 
 **Way of thinking and dealing with such questions?**
 
-The key way to start attempting such questions is to first understand what question is asking and what constraints it has. Here in the 1st example, the question is asking you, for a given seat no. print the type of birth it is using some mathematical concepts. Now, the best way to attempt such problems is that they repeat their pattern at some instance of time. Just try to visualise the pattern, question is following. Is it repeating the same pattern after a few number of steps, if yes then try to get an answer out of that.
+The key way to start attempting such questions is to first understand what the question demands and what are its constraints. The following example is asking you to obtain a seat no. from the user and output the type of berth at which the seat can be found. This output should be obtained using some mathematical concepts rather than manual work/coding. A keen observation to be made in this category of problems is that they repeat their pattern at some instance of time. Try to visualise the pattern before attempting to solve the question. Ask yourself, is it repeating the same pattern after a few number of steps? If yes then try to follow the pattern and obtain a solution from that.
 
   
 
 **Example 1:**
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image14.png)
+![](https://lh5.googleusercontent.com/0yE0tO8ODMeppWZNV6FBVZa1wvXwBwzahIRhh-muiojL_NqsLmmFMImNssupdK85TMlk3HFgeM8yQhWWjnpbh9awSKOPGaItP2xNa302Ha_eKjqRsKOKuTHGDVLetwQLI5jh0pHVxr8pYwXeggNleQ)
 
-**How to approach**
+**How to approach:**
 
-Now, what we can see here is, the total number of distinct types of seats are 8, means after 8 seats, it will repeat the same pattern again and again. And if it is repeating the same pattern after each leap of 8, can we say that for every possible remainder of (seat no.)/(8), we will get the same output. Yes it is.
+We believe that it is common knowledge that a railway coach is divided into various compartments of 8 seats. Since the total number of distinct types of seats are 8, we can conclude that it will repeat the same pattern consequently. If the pattern is repeated after each leap of 8, this implies that for every possible remainder of (seat no.)/(8), we will get the same output.
 
-Here seat 1 is lower berth so as per our assumption seat (8+1) will also be lower , (2*8 + 1) will also be lower and so on as they all get remainder as 1 when divided by 8. So, it you were asked to output type of seat for any number x, then output will follow following criteria:
+Here seat 1 is the lower berth so as per our assumption seat (8+1) would also be the lower berth. (2*8 + 1) would be the lower berth as well and so on. This is because they all get a remainder of 1 when divided by 8. So, if you were asked to output the type of seat for any seat number x, then the output will follow following criteria:
 
   
 
@@ -238,24 +367,22 @@ Here seat 1 is lower berth so as per our assumption seat (8+1) will also be lowe
 8.  If remainder is 8 it will be side upper
     
 
->(Now, dry run it for seat no. 9,10,11,12,13,14,15,16 , You will get the same output).
-
-  
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image15.png)
-  
-
->(This problems can give you a feel of competitive programming sort of question, which generally comes in codeforces div 2 A,B).
+>(Now, dry run this logic for seat no. 9,10,11,12,13,14,15,16. You will see that you get the same output).
 
   
 
-**Follow on:**
-
-Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
+![](https://lh4.googleusercontent.com/ry0UrLmqkhnb7PZHC3BgNTqqQAhMbzNO_atjtcYyjVHeZvMX36_zy2X7iKFS8hq9DyKeDHaIYqmoM_sdDkeXWH_nzQsuu6aTgjTVZD9wvSF8oZSpfjRMPhK9Fmi1TCuB_q9VwO1qCVmE7hAVYIWMvg)
 
   
+
+>This problem gives you a glimpse of the kind of questions you will see in competitive programming (It generally appears in codeforces div 2 A,B).
+
   
-  
-  
+
+**Follow up**
+
+Now try to solve the remaining examples on your own. This is the bridge to problem solving using programming and is an essential topic to grasp if you want to be able to solve any problem statement given to you.
+
   
   
   
@@ -263,71 +390,206 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-**Follow on questions and solution:**
+**Follow up questions**
 
   
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image16.png)
+**Question 1:**
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image17.png)
-
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image18.png)
-  
-
-## Goal it
+**Key idea:** Find the digital root of a given number.
 
   
 
-**What are they?**
+Digital root is found by adding the digits of the number until we get a single digit.
 
-A figure will be given in these questions. The various rectangular boxes are like obstacles. And there are 2 circles in the figure. You have to tell various steps followed up by any of the balls to reach another ball. You can shift the positions of the obstacles left-right and up-down.
+  
+
+**Eg.:** Digital root of 698 = 6+9+8 = 23 → 2+3 = 5
+
+  
+
+Logic :bulb:  9, if the number is divisible by 9. Else %9.
+
+  
+
+**Question 2:**
+
+**Key idea:** Find the sum of the quotients when alternate positive odd numbers from 3 to 101 are divided by 2.
+
+  
+
+Logic :bulb:  The quotients will be odd numbers. We are required to find the sum of odd numbers so the answer obtained should be n2.
+
+
+**Question 3:**
+
+**Key idea:** Find the sum of numbers which are multiples of both 3 and 5 from 1 to 1500.
+
+  
+
+Logic  :bulb:  Find the multiples of 15 (LCM of 3 and 5 is 15) in the first 1500 numbers and add them all together. These numbers would be 15, 30, 45, 60 and so on. A shortcut of doing this would be finding the number of the first 100 natural numbers and multiplying the result by 15.
 
   
   
 
-**Way of thinking and dealing with such questions?**
+### 4. Goal it:
 
-As, you can see, it's looking more like a problem asking you to check various possible moves, and you have to output that set of moves which will bring both circles to a single location. Now, the best way to solve such problems is, always try to decrease some distance between both the balls in each move, by moving obstacles. Move obstacles in such a way that it will make the ball reach the correct destination.
+  
+
+**What is it?**
+
+You will be given a grid like figure with various colored rectangular obstacles and two colored balls. Your task is to figure out the various steps and trace the path followed by any of the balls to reach another ball. You can shift the positions of the obstacles left-right and up-down depending on the empty spaces around them.
+
+  
+  
+
+**How do we approach and deal with such questions?**
+
+This problem is a trial and error problem that requires you to check various possible moves. Your answer will be the set of moves which brings the orange ball to drop down into the black hole. The best way to solve such problems is to always try and decrease some distance between the ball and the black hole with each move, by moving obstacles. Move the obstacles in such a way that it will make the ball reach its destination.
 
   
 
 **Example 1:**
 
   
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image19.png)
+![](https://lh4.googleusercontent.com/ARZeu8OoEjMw1qSQxS5zZhnTv1Ij-DkCJvDwNKkpr7_DK8_II7HsUoiAT_m4ys0fpl39qKi0xsSbiyiLNSzCde0c5IVeqV5acuk5fd4o0_ko5KCkCIVB_UhFGw--lDJ4a0-FkySzIrX3bgzT5yi6wfQ)
   
 
 **How to approach**
 
-Yes, you are thinking right. Just think greedly, how can you do that? I had given you some ideas to approach such problems, now it's time to dry run that on the 1st example. Here, the 1st ball is in 1st row and target position is in the last row. Now the ball cannot move down as of now as there is a brown coloured obstacle. So, shift the brown obstacle to the left end and move the ball to coordinate (2,4) and again move the brown block to the top most row. Now, the 2nd row is fully empty, but there is a yellow obstacle in the 3rd row, so shift the yellow obstacle left end and now you can see, we have a clear way to the goal and yes we reached the target.
-
-  
-  
-
->(This type of problem will make you think 3 to 4 moves ahead of the current condition).
+We have previously discussed some ideas on how to approach such problems, now it's time to dry run that thought process on the 1st example.Let’s take the orange ball as the moving ball and the black hole as the target. The ball is in 1st row and hole is in the last row. The ball cannot be moved down as there is a brown rectangular obstacle. Our first move will be to shift the brown obstacle to the left end and move the ball to coordinate (2,4). Now move the brown block to the topmost row. The 2nd row is completely empty now, however there is a yellow obstacle in the 3rd row, so shift the yellow obstacle to the left end. You now have a clear path to the goal. .
 
   
 
-**Follow on:**
+**Solution:**
 
->Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
+1.  Brown and Yellow block completely to the left end.
+    
+2.  Orange ball to coordinates (2,4)
+    
+3.  Brown block to the 1st row
+    
+4.  ball downward to the hole.
+    
 
   
 
-**Follow on questions and solution:**
+>This is a type of problem that will drive you to think 3 to 4 moves ahead of the current condition.
 
   
+
+**Follow up**
+
+Now try to solve the remaining examples on your own.
+
   
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image20.png)
+**Follow up questions**
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image21.png)
+  
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image22.png)
+**Question 1:**
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image23.png)
+![](https://lh6.googleusercontent.com/rYaIdeH-6LBLwOLFn58mhQRvzsf6YJwh3kAIWAeJgka9zIQls_jp38RrC4anWZAvzfg_FuO7XMb1EHWyFyHLhNzCHvu7qdzZhsRFX8NtwE_N4dzl_qVIyPN8yU7JU2zZ2BIyJHx8TMHnRp8pmzoKGiM)
+
+  
+<details>
+  <summary>Check the Solution!</summary>  
+
+
+
+1.  Purple block – 1 row ↓
+    
+2.  Orange ball to coordinates (2,2)
+    
+3.  Green block – 2 rows ↑
+    
+4.  Purple block – 1 column ←
   
   
+</details>  
+
+    
+
+  
+
+**Question 2:**
+
+![](https://lh3.googleusercontent.com/8Y73Nq-2f5Bvz_jbnMC1axieG5ErDe0BABCBcXXRohcP1-I9BrX2DKEv_xg-F0DUZ3uz-2LpQT8xKyWcD_cRMnOk79D4Ly1uziu5BAfpRE5BveMhFYjY6BvbOxXHdTTM9cXulk6r8uJtTC4H7jS0g8M)
+
+  
+
+  
+<details>
+  <summary>Check the Solution!</summary>  
+
+
+1.  Orange ball to coordinates (3,3)
+    
+2.  Green block – 1 row ↓
+    
+3.  Purple block – 1 column ←
+  
+  
+</details>  
+
+
+    
+
+  
+
+**Question 3:**
+
+![](https://lh3.googleusercontent.com/6W8SzqNZmhgKITNfezqqFRaLdp8cgw7qsvB0n0oc4Ek5CuxuLDT7otRa88U0i3Pn8acT79u6ireIgYjMhfZAaCsR2H1vVqjUPCD-gVmV2pL6HMtntkpt-rPojQZiDOeh4c3DFOo1kr1X-JIcRLZgYbQ)
+
+
+<details>
+  <summary>Check the Solution!</summary>  
+
+
+1.  Purple block – 1 column →
+    
+2.  Orange ball to coordinates (1,3)
+    
+3.  Green block – 2 rows ↑
+    
+4.  Yellow block – 2 columns →
+    
+5.  Brown block – 1 row ↓
+
+</details>  
+
+
+    
+
+  
+
+**Question 4:**
+
+  
+![](https://lh5.googleusercontent.com/oRUh7R1DqHfAAVO-gydrAsAlg7SBEPxeU2lb1-R_QbQSwymIYLDoPyRinrNJFCX_JH8XHyNfoyxK-Cn8M8Cnn73acvQlTeBCLvgz7vREnyOBGBtN-VNErppzWnXzGfCEufKHsTqLalpVz5rTs8ziCCM)
+
+  
+
+<details>
+  <summary>Check the Solution!</summary>  
+
+
+1.  Blue block – 2 rows ↑
+    
+2.  Yellow block – 1 column ←
+    
+3.  Purple block – 1 column →
+    
+4.  Pink block – 1 column → and 1 row ↑
+    
+5.  Brown block – 1 column ←, 2 rows ↑ and 1 column →
+    
+
+
+</details>  
+
+
   
   
 
@@ -335,54 +597,112 @@ Yes, you are thinking right. Just think greedly, how can you do that? I had give
 
   
 
-1.    
+**Question 1:** Find out what replaces the question mark :question: at the end of the pattern:
+
+![](https://lh6.googleusercontent.com/0oU8wnodllM3KfMjI4V78G6M_g9XGHDHfDZgq8rFzxhdhfQsMeg49Wz02DK8D5GYPjbpWHH8onhrgPy4lDd-I_6axEEcse6FVY3heE_EuHpyGoFaz4D_RGzNV69MZu107RIbFFHiN-xVAsGdoIcCVtU)
+
+  
+  
+
+**Solution:** The answer is option B.
+
+LU Measured: Problem solving
+
+  
+
+**Question 2:** We suspect these colored grids follow a pattern. Can you follow the pattern and find out what colour the rest of the grids would be?
+
+![](https://lh6.googleusercontent.com/BeaAPj5qj8n7t6T5ZhTBde97Mefke_BM075qMGEtz7E5_qxqlg_H4_s35iPAqpqGJObCVeb8O2ncKUkIhMzbP7SrkW6_omWYHumB75TsR_k9IzYQ2w50fzs6LAk67M9EUAqP3EpRRzVtT1JKVHatoqc) 
+  
+  
+
+1.  Green Green Green Grey
+    
+2.  Green Grey Grey Green
+    
+3.  Green Green Grey Grey
+    
+4.  Green Grey Green Grey
     
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image24.png)
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image25.png)
   
 
-2.    
+**Solution:** The answer is option C.
+
+LU Measured: Problem solving
+
+**Question 3:** Put the orange ball in the black hole by moving around the obstacles and finding the best path.
+
+![](https://lh6.googleusercontent.com/MZ2hqaugokLX4hg4DlbINrtO8AM-fGtWh8NacyIY9ItOh7b_MC7xqzgnPeSITXm3PALOH3zDNAJlM4Q2BgZMGdWpxk-sQbLWPmbSTArox6aqG3jHrpknLQ9fea4_UuBhxDrB9vXT-oNSE3Dhf9zCljw)
+  
+  
+  
+  
+
+A.
+
+  Green and purple blocks – 1 row ↓  
+
+  Brown block – 1 column ←
+
+  Yellow block – 1 column ↓
+
+  Orange ball to coordinates (4,4)
+
+  Brown block – 1 column →
+
+  
+
+B.
+
+  Brown block – 1 column ←
     
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image26.png) 
-  
-  
-  
-  
-  
-  
-  
+  Green block – 1 column ←
+
+  Purple block – 1 column ←
+
+  Orange ball to coordinates (2,3)
+
+  Yellow block – 1 row →
+
   
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image27.png)
-  
+C.
 
-3.    
+  Brown block – 1 column ←
     
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image28.png) 
+  Green and purple blocks – 1 row ↓
+
+  Orange ball to coordinates (2,4)
+
+  Yellow block – 1 column →
+
+  Brown block – 1 row ↑
+
   
+
+D.
+
+  Yellow block – 1 column →
+    
+
+  Brown block – 1 column ←  
+  Orange ball to coordinates (2,4)
+
+  Brown block – 1 row ↑
+
+  Green and purple blocks – 1 row ↓
+
   
-  
-  
-  
-  
+
+**Solution:** The answer is option C.
+
+LU Measured: Problem solving
+
   
   
   
 
-![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/5image29.png)
+Under the hood 💡 To solve more such problems with visuals, you can refer to the lesson [under the hood](https://kalvi-education.github.io/Courseware/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/Under-the-hood#thinking-with-visuals).
